syntax = "proto3";

package com.example.grpc;
option go_package = "sample";

service SampleService{
    rpc SampleAPI(SampleReq) returns (SampleRes);
}

message SampleReq{
    string mess = 1;
}

message SampleRes{

    Data data = 1;
    Error error = 2;
    
    message Data{
        string data = 1;
    }

    message Error{
        string domain = 1;
        int32 code = 2;
        string message =3;
    }
}


